# docintel

./: .gitignore  README.md
backend/: nixpacks.toml  pyproject.toml  requirements.txt
backend/app/: db.py  main.py  main2.py  models.py  openai_client.py  run.py
backend/app/pipeline/: anomaly.py  anomaly_local.py  classification.py  classification_local.py  crm.py  cross_document.py  extraction.py  extraction_local.py  ingestion.py  orchestrator.py  orchestrator_mode_aware.py  risk.py  stage1_ingestion.py
backend/app/scripts/: download_models.py
backend/app/services/: docx_parser.py  excel_parser.py  image_parser.py  pdf_parser.py
backend/app/websockets/: manager.py
frontend/: Caddyfile  nixpacks.toml  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: PipelineStage.jsx  RichResults.jsx
frontend/src/components/tabs/: AnomaliesTab.jsx  ClassificationTab.jsx  ExtractionTab.jsx  OverviewTab.jsx  PipelineTab.jsx
frontend/src/hooks/: usePipelineStream.js  useProjectStore.js
frontend/src/views/: DocumentWorkspace.jsx  ProjectDetail.jsx  ProjectsList.jsx
test_docs/: financial_data_project2.xlsx  invoice_project1.docx
