[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.1",
    "huggingface-hub>=1.21.0",
    "onnxruntime>=1.27.0",
    "openai>=2.44.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.10",
    "pymupdf>=1.27.2.3",
    "pymupdf4llm>=1.27.2.3",
    "pytesseract>=0.3.13",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.32",
    "sentence-transformers>=5.6.0",
    "spacy>=3.8.14",
    "uvicorn[standard]>=0.49.0",
    "xlrd>=2.0.2",
]
